--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -27,7 +27,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 20px;
-  gap: 16px;
+  gap: 20px 21px;
 
   .card {
     display: flex;
@@ -60,6 +60,8 @@
 
 @media screen and (max-width: 1280px) {
   .skills-cards {
+    gap: 20px 24px;
+
     .card {
       width: calc(100% / 3 - 1em);
     }
@@ -88,6 +90,8 @@
   }
 
   .skills-cards {
+    gap: 20px 32px;
+
     .card {
       width: calc(100% / 2 - 1em);
     }
