--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,6 +40,10 @@ a {
   color: #fff;
 }
 
+a {
+  cursor: pointer;
+}
+
 main {
   overflow: hidden;
 }
